# atomic_pipes

./: .gitignore  README.md
nn/: classes_fixed.csv  q.ipynb
nn/data_preparation/: 1_name_changing.ipynb  2_plot_marks.ipynb  4_create_bbox.ipynb  df_bboxes.csv  df_pipe_paths.csv  label_dir.ipynb
website/backend/: a.py  pyproject.toml
website/backend/backend/: __main__.py  model.py
website/frontend/: next.config.js  package-lock.json  package.json
website/frontend/src/app/: layout.js  page.js
website/frontend/src/components/: CustomAnalysis.js  DefectAreaChart.js  DefectTypesDonut.js  image.js
