[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["idevtier <idevtier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiofiles = "^23.2.1"
aiohttp = "^3.9.1"
loguru = "^0.7.2"
aiohttp-session = "^2.12.0"
cryptography = "^41.0.7"
numpy = "^1.26.2"
torch = {version = "^2.1.2+cpu", source = "pytorch-cpu"}
torchvision = {version = "^0.16.2+cpu", source = "pytorch-cpu"}
torchaudio = {version = "^2.1.2+cpu", source = "pytorch-cpu"}
pillow = "^10.1.0"
ultralytics = "^8.0.227"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
api = "backend.__main__:main"
